Movendo icones para pasta

--- a/central/assets/index.html
+++ b/central/assets/index.html
@@ -25,12 +25,14 @@
         <div>
             <div class="general-container">
                 <div class="card-elem">
-                    <img class="icon" src="temperature.png">
-                    <p id="general-temperature">25ºC</p>
+                    <div class="card-elem-title">Temperatura Média</div>
+                    <img class="icon" src="icons/temperature.png">
+                    <p id="general-temperature">Temperatura Média</p>
                 </div>
                 <div class="card-elem">
-                    <img class="icon" src="alarm.png">
-                    <p id="general-alarm-system">Ligado</p>
+                    <div class="card-elem-title">Sistema de Alarme</div>
+                    <img class="icon" src="icons/alarm.png">
+                    <p id="general-alarm-system">Sistema de Alarme</p>
                 </div>
             </div>
         </div>
