Adicionando alarme e animação

--- a/central/assets/index.html
+++ b/central/assets/index.html
@@ -34,6 +34,11 @@
                     <img class="icon" src="icons/alarm.png">
                     <p id="general-alarm-system">Sistema de Alarme</p>
                 </div>
+                <div class="card-elem" id="alarm-container">
+                    <div class="card-elem-title">Alarme</div>
+                    <img class="icon" src="icons/buzzer.png">
+                    <p id="general-alarm">Alarme</p>
+                </div>
             </div>
         </div>
     </div>
