Adicionando humidade na interface

--- a/central/assets/index.html
+++ b/central/assets/index.html
@@ -30,6 +30,11 @@
                     <p id="general-temperature">Temperatura Média</p>
                 </div>
                 <div class="card-elem">
+                    <div class="card-elem-title">Humidade Média</div>
+                    <img class="icon" src="icons/humidity.png">
+                    <p id="general-humidity">Humidade Média</p>
+                </div>
+                <div class="card-elem">
                     <div class="card-elem-title">Sistema de Alarme</div>
                     <img class="icon" src="icons/alarm.png">
                     <p id="general-alarm-system">Sistema de Alarme</p>
