Adicionando card de total de pessoas

--- a/central/assets/index.html
+++ b/central/assets/index.html
@@ -35,6 +35,11 @@
                     <p id="general-humidity">Humidade Média</p>
                 </div>
                 <div class="card-elem">
+                    <div class="card-elem-title">Pessoas</div>
+                    <img class="icon" src="icons/persons.png">
+                    <p id="general-persons">Pessoas</p>
+                </div>
+                <div class="card-elem">
                     <div class="card-elem-title">Sistema de Alarme</div>
                     <img class="icon" src="icons/alarm.png">
                     <p id="general-alarm-system">Sistema de Alarme</p>
