Adicionando comando para acionar sistema de alarme

--- a/central/assets/index.html
+++ b/central/assets/index.html
@@ -39,7 +39,7 @@
                     <img class="icon" src="icons/persons.png">
                     <p id="general-persons">Pessoas</p>
                 </div>
-                <div class="card-elem">
+                <div class="card-elem clickable" onclick="onAlarmSystemClick()">
                     <div class="card-elem-title">Sistema de Alarme</div>
                     <img class="icon" src="icons/alarm.png">
                     <p id="general-alarm-system">Sistema de Alarme</p>
@@ -55,6 +55,7 @@
 
     <div id="rooms"></div>
 
-    <script src="script.js"></script>
+    <script src="commands.js"></script>
+    <script src="building.js"></script>
 </body>
 </html>
