adicionando comando para ligar lampadas

--- a/central/assets/index.html
+++ b/central/assets/index.html
@@ -39,6 +39,16 @@
                     <img class="icon" src="icons/persons.png">
                     <p id="general-persons">Pessoas</p>
                 </div>
+                <div class="card-elem clickable">
+                    <div class="card-elem-title">Lâmpadas</div>
+                    <img class="icon" src="icons/lamp.png">
+                    <p id="general-persons">Ligar lâmpadas</p>
+                </div>
+                <div class="card-elem clickable">
+                    <div class="card-elem-title">Cargas</div>
+                    <img class="icon" src="icons/projector.png">
+                    <p id="general-persons">Desligar Cargas</p>
+                </div>
                 <div class="card-elem clickable" onclick="onAlarmSystemClick()">
                     <div class="card-elem-title">Sistema de Alarme</div>
                     <img class="icon" src="icons/alarm.png">
