--- a/central/assets/index.html
+++ b/central/assets/index.html
@@ -44,7 +44,7 @@
                     <img class="icon" src="icons/lamp.png">
                     <p id="general-persons">Ligar lâmpadas</p>
                 </div>
-                <div class="card-elem clickable">
+                <div class="card-elem clickable clickable" onclick="turnOffRelays()">
                     <div class="card-elem-title">Cargas</div>
                     <img class="icon" src="icons/projector.png">
                     <p id="general-persons">Desligar Cargas</p>
