--- a/central/assets/index.html
+++ b/central/assets/index.html
@@ -25,8 +25,7 @@
 
     <div class="card-container text-center">
         <h1>Geral</h1>
-        <div>
-            <div class="general-container">
+            <div class="card-elem-container">
                 <div class="card-elem">
                     <div class="card-elem-title">Temperatura Média</div>
                     <img class="icon" src="icons/temperature.png">
